--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=demo
+# ? ?? H2 console????????? DB GUI?
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+# ? ??????? H2 ???
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# ? ?????????
+spring.jpa.hibernate.ddl-auto=create
+
+# ? ?? JPA ??? SQL?????
+spring.jpa.show-sql=true
